7 files modified, 4 added, 2 deleted

--- a/components/bgImage/bgImage.module.css
+++ b/components/bgImage/bgImage.module.css
@@ -1,5 +1,9 @@
 .imgCtn > span {
   background-color: inherit !important;
+  z-index: inherit;
+}
+.imgCtn {
+  z-index: -1;
 }
 .bgImage {
   height: 500px;
